# cicdtest

./: .gitignore  PROJECT_STRUCTURE.md  README.md  SETUP.md  app.py  pyproject.toml  requirements.txt
.github/: CODEOWNERS
.github/workflows/: ci-cd.yml  merge-ready-pr.yml
app/: __init__.py  config.py  extensions.py
app/admin/: __init__.py  routes.py
app/api/: __init__.py  audit.py  auth.py  change_requests.py
app/audit/: __init__.py  events.py  logger.py  routes.py
app/auth/: __init__.py  decorators.py  forms.py  mfa.py  rbac.py  routes.py
app/change_requests/: __init__.py  forms.py  routes.py  services.py
app/models/: __init__.py  audit.py  change_request.py  project.py  role.py  user.py  user_invitation.py
app/services/: __init__.py  email_service.py  sla_monitor.py
app/utils/: security.py  validators.py
docs/: api.md  developer-guide.md  user-guide.md
scripts/: cleanup_fresh_start.py  create_admin.py  create_user.py  init_db.py
static/: site.css
static/js/: main.js
templates/: about.html  base.html  home.html
templates/admin/: create_project.html  create_user.html  dashboard.html  project_detail.html  projects.html  report_pdf.html  reports.html  users.html
templates/audit/: logs.html  report.html
templates/auth/: accept_invitation.html  login.html  mfa_verify.html  profile.html  unauthorized.html
templates/change_requests/: approve.html  close.html  create.html  edit.html  implement.html  list.html  rollback.html  view.html
tests/: conftest.py
tests/integration/: test_admin_operations.py  test_audit_logout_event.py  (+6 more)
(+18 files in other folders)
